# tinhkyaw

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  _config.yml  pyproject.toml  setup.sh
.github/workflows/: pages-deployment.yaml
.trunk/: trunk.yaml
arch/conf/: .zshrc  spacemacs  zpreztorc
arch/hadoop/hadoop/: hdfs-site.xml
arch/lists/: poetry_packages  poetry_packages.broken  pycharm_plugins
conf/: .bash_profile  .bashrc  .emacs  .gitconfig  .screenrc  .zshrc  casks  gitconfig  init.el  paths  prettierrc  settings.json  spacemacs  ssh_config
conf/.emacs.d/: my-loadpackages.el  my-packages.el
conf/.emacs.d/custom-modes/: autoconf-mode.elc  autotest-mode.elc  gnuplot-gui.elc  gnuplot.elc  js2.elc  php-mode.elc
conf/.emacs.d/custom-modes/nxml-mode/: nxml-enc.elc  nxml-glyph.elc  nxml-maint.elc  nxml-mode.elc  nxml-ns.elc  nxml-outln.elc  nxml-parse.elc  nxml-rap.elc  nxml-uchnm.elc  nxml-util.elc  rng-cmpct.elc  rng-dt.elc  rng-loc.elc  rng-maint.elc  rng-match.elc  rng-nxml.elc  rng-parse.elc  rng-pttrn.elc  rng-uri.elc  rng-util.elc  rng-valid.elc  rng-xsd.elc  xmltok.elc  xsd-regexp.elc
conf/chezmoi/: chezmoi.toml
conf/code/: mcp.json  settings.json
conf/doom/: config.el  packages.el
conf/eza/: catppuccin-macchiato-blue.yml
conf/git/: gitconfig
conf/hadoop/: core-site.xml  hadoop-env.sh  mapred-site.xml  yarn-site.xml
conf/lsd/: config.yaml
conf/oozie/: oozie-site.xml
conf/zed/: settings.json
conf/zsh/: zimrc  zpreztorc  zshrc
hadoop/hadoop/: env
lists/: brews  brews.txt  casks.broken  casks.csv  casks.txt  casks_broken.txt  casks_c.csv  casks_c.txt  casks_china.txt  casks_i.csv  casks_i.txt  casks_ignore.txt  casks_p.csv  casks_p.txt  casks_paid.txt  casks_r.csv  casks_r.txt  casks_t.csv  casks_t.txt  casks_x.csv  casks_x.txt  casksd.txt  casksp.txt  casksx.txt  codes.txt  eclipse_plugins.txt  gems.txt  ghgis.txt  gis.txt  gitemplates  gitignore  npms.txt  pip3s.txt  pips.broken  taps.txt  vscode_extensions
resume/: Makefile  awesome-cv.cls  education.tex  experience.tex  patents_awards.tex  skills.tex  summary.tex  tinhkyaw-resume.tex
resume/tex/: awesome-cv.cls  experience.tex  patents_awards.tex  skills.tex  summary.tex  tinhkyaw-resume.tex
scripts/: cleanup-caskroom.sh  cleanup-caskroom.zsh  cleanup-homebrew-cask.sh  common.sh  diff-snap.zsh  diff-snapshots.zsh  emacs  find-broken-casks.sh  fix-casks.sh  get-cli-sudo-pass.sh  git-delete-branches.sh  git-pull-all.sh  git-pull-all.zsh  ignored  init.el  latest  myhadoop  reinstall-brew.sh  s3cat  setup-bin.sh  setup-common.sh  setup-conf.sh  setup-sudo-askpass.sh  setup-zsh.zsh  setup.sh  snapshot.sh  snapshot.zsh  tunnel  update-all.sh  update-all.zsh  update-gi.zsh  update-gitignore.zsh
www/: config.toml  netlify.toml  package.json
www/content/: setup.md
www/content/articles/: _index.md  setup.md  welcome.md
www/content/pages/: about.md  privacy.md  resume.md
www/functions/: _middleware.js
www/public/: search_index.en.js
www/static/: tinhkyaw.webmanifest
www/static/js/: app.js
www/templates/: base.html  index.html
www/templates/partials/: footer.html
