[tool.poetry]
name = "tinhkyaw"
version = "0.1.0"
description = "Tin's favorite pip package collection"
authors = ["Tin Htet Kyaw <tinhkyaw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "^1.10.12"
apache-libcloud = "^3.1.0"
atomicwrites = "^1.4.0"
backcall = "^0.2.0"
bandit = "^1.6.2"
boto3 = "^1.14.62"
bottle = "^0.12.18"
celery = "^4.4.7"
cement = "^3.0.4"
click-completion = "^0.5.2"
cryptography = "^3.1"
cython = "^0.29.21"
dask = "^2.26.0"
ddt = "^1.4.1"
decorator = "^4.4.2"
django = "^3.1.1"
django-environ = "^0.4.5"
django-extensions = "^3.0.8"
docker = "^4.3.1"
docopt = "^0.6.2"
docsend = "^0.2.0"
editdistance = "^0.5.3"
entrypoints = "^0.3"
first = "^2.0.2"
geventhttpclient-wheels = "^1.3.1-alpha.3"
gitdb2 = "^4.0.2"
h2 = "^3.2.0"
honeycomb-beeline = "^2.13.1"
hstspreload = "^2020.9.15"
html5lib = "^1.1"
httpx = "^0.14.3"
importlib-metadata = "^1.7.0"
invoke = "^1.4.1"
jedi = "^0.17.2"
js-regex = "^1.0.1"
keras = "^2.4.3"
keras-applications = "^1.0.8"
locust = "^1.2.2"
luigi = "^3.0.1"
memory-profiler = "^0.57.0"
mistune = "^0.8.4"
monotonic = "^1.5"
nltk = "^3.5"
nose = "^1.3.7"
ordereddict = "^1.1"
pexpect = "^4.8.0"
pickleshare = "^0.7.5"
pipfile = "^0.0.2"
prompt-toolkit = "^3.0.7"
psycopg2 = "^2.8.6"
pyarrow = "^1.0.1"
pycairo = "^1.19.1"
pyre-check = "^0.0.53"
pyspark = "^3.0.1"
requirements-parser = "^0.2.0"
retrying = "^1.3.3"
rope = "^0.17.0"
scikit-learn = "^0.23.2"
seaborn = "^0.11.0"
simplegeneric = "^0.8.1"
singledispatch = "^3.4.0"
smmap2 = "^3.0.1"
sphinx-rtd-theme = "^0.5.0"
sympy = "^1.6.2"
tensorflow = "^2.3.0"
tldextract = "^2.2.3"
torchvision = "^0.7.0"
traitlets = "^5.0.4"
typed-ast = "whichcraft"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
