[tool.poetry]
name = "tinhkyaw"
version = "0.1.0"
description = "Tin's favorite pip package collection"
authors = ["Tin Htet Kyaw <tinhkyaw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
apache-airflow = "^1.10.14"
apache-libcloud = "^3.3.1"
atomicwrites = "^1.4.0"
backcall = "^0.2.0"
bandit = "^1.7.0"
boto3 = "^1.17.15"
bottle = "^0.12.19"
celery = "^5.0.5"
cement = "^3.0.4"
click-completion = "^0.5.2"
cryptography = "^3.4.6"
Cython = "^0.29.22"
dask = "^2.30.0"
ddt = "^1.4.1"
decorator = "^4.4.2"
Django = "^3.1.7"
django-environ = "^0.4.5"
django-extensions = "^3.1.1"
docker = "^4.4.4"
docopt = "^0.6.2"
docsend = "^0.2.0"
editdistance = "^0.5.3"
entrypoints = "^0.3"
first = "^2.0.2"
ftfy = "^5.9"
gitdb2 = "^4.0.2"
h2 = "^4.0.0"
honeycomb-beeline = "^2.16.2"
hstspreload = "^2020.12.22"
html5lib = "^1.1"
httpx = "^0.16.1"
importlib-metadata = "^3.7.0"
invoke = "^1.5.0"
jedi = "^0.17.2"
js-regex = "^1.0.1"
luigi = "^3.0.2"
memory-profiler = "^0.58.0"
mistune = "^0.8.4"
monotonic = "^1.5"
nose = "^1.3.7"
ordereddict = "^1.1"
pexpect = "^4.8.0"
pickleshare = "^0.7.5"
pip = "^20.3.3"
pipfile = "^0.0.2"
prompt-toolkit = "^3.0.16"
psycopg2 = "^2.8.6"
pycairo = "^1.20.0"
pyre-check = "^0.0.58"
pyspark = "^3.0.2"
requirements-parser = "^0.2.0"
retrying = "^1.3.3"
rope = "^0.18.0"
simplegeneric = "^0.8.1"
singledispatch = "^3.6.0"
sphinx-rtd-theme = "^0.5.1"
sympy = "^1.7"
tldextract = "^3.1.0"
traitlets = "^5.0.5"
typed-ast = "^1.4.2"
whichcraft = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"
